force-app/main/default/objects/Beneficiary__c/Beneficiary__c.object-meta.xml
<CustomObject>
    <label>Beneficiary</label>
    <pluralLabel>Beneficiaries</pluralLabel>
    <nameField>
        <label>Beneficiary Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>An individual receiving services from an NGO programme.</description>
</CustomObject>