force-app/main/default/objects/Beneficiary__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Child (0-12)</fullName><default>false</default><label>Child (0-12)</label></value>
            <value><fullName>Youth (13-24)</fullName><default>false</default><label>Youth (13-24)</label></value>
            <value><fullName>Adult (25-59)</fullName><default>false</default><label>Adult (25-59)</label></value>
            <value><fullName>Senior (60+)</fullName><default>false</default><label>Senior (60+)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>