force-app/main/default/objects/Beneficiary__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Gauteng</fullName><default>false</default><label>Gauteng</label></value>
            <value><fullName>KwaZulu-Natal</fullName><default>false</default><label>KwaZulu-Natal</label></value>
            <value><fullName>Western Cape</fullName><default>false</default><label>Western Cape</label></value>
            <value><fullName>Eastern Cape</fullName><default>false</default><label>Eastern Cape</label></value>
            <value><fullName>Limpopo</fullName><default>false</default><label>Limpopo</label></value>
            <value><fullName>Mpumalanga</fullName><default>false</default><label>Mpumalanga</label></value>
            <value><fullName>North West</fullName><default>false</default><label>North West</label></value>
            <value><fullName>Free State</fullName><default>false</default><label>Free State</label></value>
            <value><fullName>Northern Cape</fullName><default>false</default><label>Northern Cape</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>