force-app/main/default/objects/Beneficiary__c/fields/Urban_Rural__c.field-meta.xml
<CustomField>
    <fullName>Urban_Rural__c</fullName>
    <label>Urban or Rural</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Urban</fullName><default>false</default><label>Urban</label></value>
            <value><fullName>Rural</fullName><default>false</default><label>Rural</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>